// Jest Snapshot v1, https://goo.gl/fbAQLP

exports['Mini Program Component should render data and props 1'] = `
Object {
  "attributes": Object {
    "bar": "from prop",
    "foo": "from data",
  },
  "tagName": "VIEW",
}
`;

exports['Mini Program Component should render default slots 1'] = `
Object {
  "children": Array [
    "Hello ",
    "Example",
  ],
  "tagName": "VIEW",
}
`;

exports['Mini Program Component should render style once 1'] = `
Object {
  "mutations": Array [
    Object {
      "addedNodes": Array [
        Object {
          "$$id": "2",
          "nodeName": "STYLE",
          "nodeType": 1,
        },
      ],
      "target": Object {
        "$$id": "3",
        "nodeName": "BODY",
      },
      "type": "childList",
    },
    Object {
      "addedNodes": Array [
        Object {
          "$$id": "1",
          "data": ".foo { color: red; }",
          "nodeType": 3,
        },
      ],
      "target": Object {
        "$$id": "2",
      },
      "type": "childList",
    },
  ],
  "type": "MutationRecord",
}
`;

exports['Mini Program Component should works well with didMount lifecycle 1'] = `
Object {
  "attributes": Object {
    "foo": "modified in didMount",
  },
  "tagName": "VIEW",
}
`;

exports['Mini Program Component should works well with methods 1'] = `
Object {
  "children": Array [
    "1",
  ],
  "tagName": "VIEW",
}
`;

exports['Mini Program Component should works well with named slot 1'] = `
Object {
  "children": Array [
    "child",
    Object {
      "attributes": Object {
        "slot": "named",
      },
      "children": Array [
        "named slot",
      ],
      "tagName": "TEXT",
    },
  ],
  "tagName": "VIEW",
}
`;

exports['Mini Program Component should render weixin component props 1'] = `
Object {
  "attributes": Object {
    "bar": "from prop",
  },
  "tagName": "VIEW",
}
`;
